Adicionei fontes e telas novas

--- a/MauiAppHotel/MauiAppHotel.csproj
+++ b/MauiAppHotel/MauiAppHotel.csproj
@@ -69,10 +69,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\RegrasHotel.xaml.cs">
+	    <DependentUpon>RegrasHotel.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Views\ContratacaoHospedagem.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\HospedagemContratada.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\RegrasHotel.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
